[gd_scene load_steps=17 format=3 uid="uid://n0648an3hc76"]

[ext_resource type="Script" path="res://Scenes/Prefabs/Levels/Storyline/Tropikala/NPC/von01.gd" id="1_6twjh"]
[ext_resource type="Texture2D" uid="uid://dha7mqx4cnil5" path="res://Assets/Photos/Characters/OnField/Von.png" id="2_co2ed"]
[ext_resource type="Texture2D" uid="uid://cmp6md46sw63r" path="res://Assets/Photos/Controller Buttons/Button_Y.png" id="2_ga1l4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_e02w1"]
radius = 121.037

[sub_resource type="BoxMesh" id="BoxMesh_ulwuk"]

[sub_resource type="Animation" id="Animation_qgv72"]
resource_name = "InteractShow"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:size")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(304, 80), Vector2(304, 80)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(-152, -40), Vector2(-152, -206)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Panel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5, 1),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_r8los"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(304, 80)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-152, -40)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Panel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_17wdq"]
_data = {
"InteractShow": SubResource("Animation_qgv72"),
"RESET": SubResource("Animation_r8los")
}

[sub_resource type="Animation" id="Animation_4s7jq"]
resource_name = "Floating"
length = 5.0
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2.5, 4, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -7), Vector2(0, -12), Vector2(0, -2), Vector2(0, -12), Vector2(0, -7)]
}

[sub_resource type="Animation" id="Animation_5483b"]
resource_name = "Looking"
length = 4.0
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 2, 3, 1]
}

[sub_resource type="Animation" id="Animation_ye0gw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -7)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yeto5"]
_data = {
"Floating": SubResource("Animation_4s7jq"),
"Looking": SubResource("Animation_5483b"),
"RESET": SubResource("Animation_ye0gw")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2lf1t"]
animation = &"Floating"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tut7j"]
animation = &"Looking"

[sub_resource type="AnimationNodeAdd2" id="AnimationNodeAdd2_oid4m"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_nrmlw"]
graph_offset = Vector2(-898.049, 93.2318)
nodes/Float/node = SubResource("AnimationNodeAnimation_2lf1t")
nodes/Float/position = Vector2(-260, 200)
nodes/Look/node = SubResource("AnimationNodeAnimation_tut7j")
nodes/Look/position = Vector2(-260, 340)
nodes/look/node = SubResource("AnimationNodeAdd2_oid4m")
nodes/look/position = Vector2(0, 240)
nodes/output/position = Vector2(240, 260)
node_connections = [&"look", 0, &"Float", &"look", 1, &"Look", &"output", 0, &"look"]

[node name="Von" type="Node2D"]
script = ExtResource("1_6twjh")
animation = 1

[node name="playerDettection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2147483648

[node name="CollisionShape2D" type="CollisionShape2D" parent="playerDettection"]
shape = SubResource("CircleShape2D_e02w1")

[node name="MeshInstance2D" type="MeshInstance2D" parent="."]
visible = false
modulate = Color(0.367069, 0.609092, 0.444585, 1)
scale = Vector2(60, 60)
mesh = SubResource("BoxMesh_ulwuk")

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(0, -7)
scale = Vector2(0.375, 0.375)
texture = ExtResource("2_co2ed")
hframes = 4

[node name="Panel" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0)
z_index = 4
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -152.0
offset_top = -40.0
offset_right = 152.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(152, 40)

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -209.0
offset_top = -27.5
offset_right = -20.0
offset_bottom = 27.5
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "INTERACT"

[node name="Y" type="Sprite2D" parent="Panel"]
position = Vector2(45, 40)
scale = Vector2(2.5, 2.5)
texture = ExtResource("2_ga1l4")

[node name="Animate" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_17wdq")
}

[node name="NPCAnimate" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_yeto5")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeBlendTree_nrmlw")
anim_player = NodePath("../NPCAnimate")
parameters/look/add_amount = 0.0

[connection signal="body_entered" from="playerDettection" to="." method="playerDetected"]
[connection signal="body_exited" from="playerDettection" to="." method="playerLeft"]
